--- a/package.json
+++ b/package.json
@@ -7,15 +7,22 @@
         "test": "jest"
     },
     "dependencies": {
+        "@react-native-community/checkbox": "^0.5.0",
         "@react-native-community/masked-view": "^0.1.10",
+        "@react-navigation/bottom-tabs": "^5.8.0",
+        "@react-navigation/drawer": "^5.9.0",
+        "@react-navigation/material-top-tabs": "^5.2.16",
         "@react-navigation/native": "^5.7.3",
         "@react-navigation/stack": "^5.9.0",
+        "jetifier": "^1.6.6",
         "react": "16.8.3",
         "react-native": "0.59.9",
         "react-native-gesture-handler": "^1.3.0",
         "react-native-reanimated": "^1.13.0",
         "react-native-safe-area-context": "^3.1.7",
-        "react-native-screens": "^2.10.1"
+        "react-native-screens": "^2.10.1",
+        "react-native-tab-view": "^2.11.0",
+        "react-navigation-tabs": "^2.9.0"
     },
     "devDependencies": {
         "@babel/core": "^7.11.5",
